# coveralls_example

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  example_ros_pkg.rosinstall  package.xml
.docker/: Dockerfile
include/example_ros_pkg/: simple_class.h
launch/: gdb_settings.gdb  simple_class_main.launch
src/: simple_class.cpp  simple_class_main.cpp
test/: ros_test.cpp  ros_test.test
