<?xml version="1.0"?>
<package format="2">
  <name>example_ros_pkg</name>
  <version>0.0.1</version>
  <description>Example for Subhas</description>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
  <author email="dave@picknik.ai">Dave Coleman</author>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/example_ros_pkg</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/example_ros_pkg/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/example_ros_pkg/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>eigen</depend>
  <depend>rviz_visual_tools</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
